Quick fix for unreadable text in settings pages.

--- a/meteor/client/styles/settings.scss
+++ b/meteor/client/styles/settings.scss
@@ -1,4 +1,5 @@
 .settings-menu {
+	font-weight: 300;
 	.settings-menu__settings-menu-item {
 		display: block;
 		text-decoration: none;
@@ -24,6 +25,7 @@
 }
 
 .settings-dialog {
+	font-weight: 300;
 	table {
 		.switch-tight {
 			padding: 0px 8px;
